--- a/package.json
+++ b/package.json
@@ -3,17 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && next dev",
+    "dev:linux": "npm run services:up && next dev",
+    "dev:prod": "cross-env NODE_ENV=production next dev",
     "build": "next build",
+    "build:prod": "cross-env NODE_ENV=production next build",
     "start": "next start",
-    "lint": "next lint"
+    "start:prod": "cross-env NODE_ENV=production next start",
+    "docker:build": "docker build -t financeai-app .",
+    "docker:run": "docker run -p 3000:3000 --env-file .env.production financeai-app",
+    "docker:build-run": "npm run docker:build && npm run docker:run",
+    "services:up": "docker compose -f docker-compose.yml up -d",
+    "services:stop": "docker compose -f docker-compose.yml stop",
+    "services:down": "docker compose -f docker-compose.yml down",
+    "services:logs": "docker compose -f docker-compose.yml logs -f",
+    "services:restart": "docker compose -f docker-compose.yml restart",
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:generate:dev": "cross-env NODE_ENV=development drizzle-kit generate",
+    "db:generate:prod": "cross-env NODE_ENV=production drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:migrate:dev": "cross-env NODE_ENV=development drizzle-kit migrate",
+    "db:migrate:prod": "cross-env NODE_ENV=production drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:studio:dev": "cross-env NODE_ENV=development drizzle-kit studio",
+    "db:studio:prod": "cross-env NODE_ENV=production drizzle-kit studio",
+    "db:push:dev": "cross-env NODE_ENV=development drizzle-kit push",
+    "db:push:prod": "cross-env NODE_ENV=production drizzle-kit push"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
+    "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.544.0",
     "next": "15.4.1",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
@@ -22,14 +49,18 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.0.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
