--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,48 @@
-# .dockerignore
-.git
-.gitignore
-README.md
-Dockerfile
-.dockerignore
-.next
-.env.local
-.env.development
+# Dependencies
 node_modules
 npm-debug.log*
-.nyc_output
-.coverage
-.eslintcache
-build.log
 
-# Manter apenas os arquivos necessários para o build
-!package.json
-!package-lock.json
-!next.config.js
-!tailwind.config.*
-!postcss.config.*
-!src/
-!public/
-!.env.production
+# Next.js
+.next/
+out/
+
+# Environment files
+.env.local
+.env.production
+
+# IDE/Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Git
+.git
+.gitignore
+
+# Docker
+Dockerfile
+.dockerignore
+docker-compose*.yml
+
+# Testing
+coverage/
+.nyc_output
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Temporary folders
+tmp/
+temp/
