chore: remover linha desnecessária do Dockerfile e atualizar scripts no package.json para usar cross-env

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "dev": "npm run services:up && next dev",
     "dev:linux": "npm run services:up && next dev",
-    "dev:prod": "NODE_ENV=production next dev",
+    "dev:prod": "cross-env NODE_ENV=production next dev",
     "build": "next build",
-    "build:prod": "NODE_ENV=production next build",
+    "build:prod": "cross-env NODE_ENV=production next build",
     "start": "next start",
-    "start:prod": "NODE_ENV=production next start",
+    "start:prod": "cross-env NODE_ENV=production next start",
     "docker:build": "docker build -t financeai-app .",
     "docker:run": "docker run -p 3000:3000 --env-file .env.production financeai-app",
     "docker:build-run": "npm run docker:build && npm run docker:run",
