--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:linux": "npm run services:up && next dev",
     "dev:prod": "cross-env NODE_ENV=production next dev",
     "build": "next build",
-    "build:prod": "cross-env NODE_ENV=production next build",
+    "build:prod": "NODE_ENV=production next build",
+    "build:simple": "NODE_ENV=production next build",
     "start": "next start",
     "start:prod": "cross-env NODE_ENV=production next start",
     "docker:build": "docker build -t financeai-app .",
