--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "npm run build:simple",
+    "buildCommand": "npm run build",
     "devCommand": "npm run dev",
     "installCommand": "npm ci",
     "framework": "nextjs",
