--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-table": "^8.20.5",
     "autoprefixer": "^10.4.21",
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
