--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "drizzle-seed": "^0.3.1",
+    "groq-sdk": "^0.32.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
@@ -72,6 +74,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
