--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-table": "^8.20.5",
     "autoprefixer": "^10.4.21",
     "better-auth": "^1.2.12",
@@ -65,6 +66,7 @@
     "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-number-format": "^5.4.4",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
