--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,55 @@
 services:
+  # Banco PostgreSQL local (para testes de produção)
   postgres:
     image: postgres:17
-    container_name: local-postgres-financeai
+    container_name: financeai-postgres-prod
     restart: always
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
-      POSTGRES_USER: local_user
-      POSTGRES_PASSWORD: local_password
-      POSTGRES_DB: local_db
-      # Configurações adicionais para desenvolvimento
+      POSTGRES_USER: financeai_user
+      POSTGRES_PASSWORD: financeai_password
+      POSTGRES_DB: financeai_db
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    # Configurações de saúde do container
+      - postgres_prod_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U local_user -d local_db"]
+      test: ["CMD-SHELL", "pg_isready -U financeai_user -d financeai_db"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - financeai-network
+
+  # Aplicação FinanceAI (produção containerizada)
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: financeai-app-prod
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
+    env_file:
+      - .env.production
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - financeai-network
+    command: >
+      sh -c "
+        echo 'Aguardando banco de dados...' &&
+        sleep 10 &&
+        node server.js
+      "
 
 volumes:
-  postgres_data:
+  postgres_prod_data:
+
+networks:
+  financeai-network:
+    driver: bridge
