--- a/package.json
+++ b/package.json
@@ -3,35 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run services:up && next dev",
-    "dev:linux": "npm run services:up && next dev",
-    "dev:prod": "cross-env NODE_ENV=production next dev",
-    "build": "next build",
-    "build:prod": "NODE_ENV=production next build",
-    "build:simple": "NODE_ENV=production next build",
-    "start": "next start",
-    "start:prod": "cross-env NODE_ENV=production next start",
+    "dev": "npm run dev:services && next dev",
+    "dev:services": "docker compose -f docker-compose.dev.yml up -d",
+    "dev:stop": "docker compose -f docker-compose.dev.yml stop",
+    "dev:down": "docker compose -f docker-compose.dev.yml down",
+    "prod:local": "docker-compose up ",
+    "prod:stop": "docker-compose stop",
+    "prod:down": "docker-compose down",
+    "prod:logs": "docker-compose logs -f app",
     "docker:build": "docker build -t financeai-app .",
     "docker:run": "docker run -p 3000:3000 --env-file .env.production financeai-app",
     "docker:build-run": "npm run docker:build && npm run docker:run",
-    "services:up": "docker compose -f docker-compose.yml up -d",
-    "services:stop": "docker compose -f docker-compose.yml stop",
-    "services:down": "docker compose -f docker-compose.yml down",
-    "services:logs": "docker compose -f docker-compose.yml logs -f",
-    "services:restart": "docker compose -f docker-compose.yml restart",
-    "lint": "next lint",
-    "db:generate": "drizzle-kit generate",
-    "db:generate:dev": "cross-env NODE_ENV=development drizzle-kit generate",
-    "db:generate:prod": "cross-env NODE_ENV=production drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:migrate:dev": "cross-env NODE_ENV=development drizzle-kit migrate",
-    "db:migrate:prod": "cross-env NODE_ENV=production drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
-    "db:studio:dev": "cross-env NODE_ENV=development drizzle-kit studio",
-    "db:studio:prod": "cross-env NODE_ENV=production drizzle-kit studio",
-    "db:push:dev": "cross-env NODE_ENV=development drizzle-kit push",
-    "db:push:prod": "cross-env NODE_ENV=production drizzle-kit push"
+    "docker:clean": "docker stop $(docker ps -q --filter ancestor=financeai-app) 2>/dev/null || true",
+    "services:up": "docker compose -f docker-compose.dev.yml up -d",
+    "services:stop": "docker compose -f docker-compose.dev.yml stop",
+    "services:down": "docker compose -f docker-compose.dev.yml down",
+    "services:logs": "docker compose -f docker-compose.dev.yml logs -f"
   },
+  "lint": "next lint",
+  "db:generate": "drizzle-kit generate",
+  "db:generate:dev": "cross-env NODE_ENV=development drizzle-kit generate",
+  "db:generate:prod": "cross-env NODE_ENV=production drizzle-kit generate",
+  "db:migrate": "drizzle-kit migrate",
+  "db:migrate:dev": "cross-env NODE_ENV=development drizzle-kit migrate",
+  "db:migrate:prod": "cross-env NODE_ENV=production drizzle-kit migrate",
+  "db:studio": "drizzle-kit studio",
+  "db:studio:dev": "cross-env NODE_ENV=development drizzle-kit studio",
+  "db:studio:prod": "cross-env NODE_ENV=production drizzle-kit studio",
+  "db:push:dev": "cross-env NODE_ENV=development drizzle-kit push",
+  "db:push:prod": "cross-env NODE_ENV=production drizzle-kit push",
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
