--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "services:up": "docker compose -f docker-compose.dev.yml up -d",
     "services:stop": "docker compose -f docker-compose.dev.yml stop",
     "services:down": "docker compose -f docker-compose.dev.yml down",
-    "services:logs": "docker compose -f docker-compose.dev.yml logs -f"
+    "services:logs": "docker compose -f docker-compose.dev.yml logs -f",
+    "build:simple": "NODE_ENV=production next build"
   },
   "lint": "next lint",
   "db:generate": "drizzle-kit generate",
