--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "financeai",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "npm run dev:services && next dev",
-    "dev:services": "docker compose -f docker-compose.dev.yml up -d",
-    "dev:stop": "docker compose -f docker-compose.dev.yml stop",
-    "dev:down": "docker compose -f docker-compose.dev.yml down",
-    "prod:local": "docker-compose up ",
-    "prod:stop": "docker-compose stop",
-    "prod:down": "docker-compose down",
-    "prod:logs": "docker-compose logs -f app",
-    "docker:build": "docker build -t financeai-app .",
-    "docker:run": "docker run -p 3000:3000 --env-file .env.production financeai-app",
-    "docker:build-run": "npm run docker:build && npm run docker:run",
-    "docker:clean": "docker stop $(docker ps -q --filter ancestor=financeai-app) 2>/dev/null || true",
-    "services:up": "docker compose -f docker-compose.dev.yml up -d",
-    "services:stop": "docker compose -f docker-compose.dev.yml stop",
-    "services:down": "docker compose -f docker-compose.dev.yml down",
-    "services:logs": "docker compose -f docker-compose.dev.yml logs -f",
-    "build:simple": "NODE_ENV=production next build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "build:simple": "NODE_ENV=production next build",
+    "dev:docker:setup": "docker compose -f docker-compose.dev.yml up -d postgres && npm run db:setup:dev && docker compose -f docker-compose.dev.yml up --build app",
+    "dev:docker": "docker compose -f docker-compose.dev.yml up --build",
+    "dev:docker:detach": "docker compose -f docker-compose.dev.yml up --build -d",
+    "dev:docker:stop": "docker compose -f docker-compose.dev.yml stop",
+    "dev:docker:down": "docker compose -f docker-compose.dev.yml down --remove-orphans",
+    "dev:docker:logs": "docker compose -f docker-compose.dev.yml logs -f",
+    "prod:docker:setup": "npm run db:setup:prod && docker compose -f docker-compose.prod.yml up --build",
+    "prod:docker": "docker compose -f docker-compose.prod.yml up --build",
+    "prod:docker:detach": "docker compose -f docker-compose.prod.yml up --build -d",
+    "prod:docker:stop": "docker compose -f docker-compose.prod.yml stop",
+    "prod:docker:down": "docker compose -f docker-compose.prod.yml down --remove-orphans",
+    "prod:docker:logs": "docker compose -f docker-compose.prod.yml logs -f",
+    "services:up": "docker compose -f docker-compose.dev.yml up -d postgres",
+    "services:stop": "docker compose -f docker-compose.dev.yml stop postgres",
+    "services:down": "docker compose -f docker-compose.dev.yml down postgres",
+    "services:logs": "docker compose -f docker-compose.dev.yml logs -f postgres",
+    "db:setup:dev": "sleep 5 && cross-env NODE_ENV=development drizzle-kit push",
+    "db:setup:prod": "cross-env NODE_ENV=production drizzle-kit push",
+    "db:reset:dev": "docker compose -f docker-compose.dev.yml down --remove-orphans -v && npm run dev:docker:setup",
+    "db:generate": "drizzle-kit generate",
+    "db:generate:dev": "cross-env NODE_ENV=development drizzle-kit generate",
+    "db:generate:prod": "cross-env NODE_ENV=production drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:migrate:dev": "cross-env NODE_ENV=development drizzle-kit migrate",
+    "db:migrate:prod": "cross-env NODE_ENV=production drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:studio:dev": "cross-env NODE_ENV=development drizzle-kit studio",
+    "db:studio:prod": "cross-env NODE_ENV=production drizzle-kit studio",
+    "db:push:dev": "cross-env NODE_ENV=development drizzle-kit push",
+    "db:push:prod": "cross-env NODE_ENV=production drizzle-kit push"
   },
-  "lint": "next lint",
-  "db:generate": "drizzle-kit generate",
-  "db:generate:dev": "cross-env NODE_ENV=development drizzle-kit generate",
-  "db:generate:prod": "cross-env NODE_ENV=production drizzle-kit generate",
-  "db:migrate": "drizzle-kit migrate",
-  "db:migrate:dev": "cross-env NODE_ENV=development drizzle-kit migrate",
-  "db:migrate:prod": "cross-env NODE_ENV=production drizzle-kit migrate",
-  "db:studio": "drizzle-kit studio",
-  "db:studio:dev": "cross-env NODE_ENV=development drizzle-kit studio",
-  "db:studio:prod": "cross-env NODE_ENV=production drizzle-kit studio",
-  "db:push:dev": "cross-env NODE_ENV=development drizzle-kit push",
-  "db:push:prod": "cross-env NODE_ENV=production drizzle-kit push",
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
